[package]
name = "meshlet_processor"
version = "0.1.0"
edition = "2024"

[features]
dev = ["bevy/dynamic_linking"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
bevy = { version = "0.15", features = [
    "meshlet",
    "meshlet_processor",
    "bevy_pbr",
    "bevy_gltf",
] }
anyhow = "1.0"
